<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ReciclajeGreen"
    tools:context=".ui.Reciclaje.ReciclajeGreenFragment">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background2"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/idLayoutFondo"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:background="#2196F3"
            android:elevation="8dp"
            android:gravity="center">

            <ImageButton
                android:id="@+id/btnIcoAtras"
                android:layout_width="60dp"
                android:layout_height="49dp"
                android:layout_marginStart="4dp"
                android:backgroundTint="#03A9F4"
                android:contentDescription="@string/boton_regresar"
                android:src="?attr/actionModeCloseDrawable"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:tint="#FFFFFF"/>

            <TextView
                android:id="@+id/titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_titulo_peticiones"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/btnAyuda"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_marginEnd="4dp"
                android:background="#03A9F4"
                android:visibility="invisible"
                android:contentDescription="@string/boton_ayuda"
                android:src="@android:drawable/ic_menu_help"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_plasticoPreview"
                    android:layout_width="match_parent"
                    android:layout_height="225dp"
                    android:background="@color/grey"
                    android:contentDescription="@string/imagen_prevista_plastico"
                    android:src="@drawable/ic_baseline_camera_alt_128"/>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp">
                    <AutoCompleteTextView
                        android:id="@+id/dropdown_categoriaPlastico"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_categoria_plastico"
                        android:inputType="none" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:id="@+id/editText_cantidadPlastico"
                    app:suffixText="@string/label_sufijo">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_cantidad_peticion"
                        android:inputType="number"
                        android:textColorHint="#546E7A" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp">

                    <AutoCompleteTextView
                        android:id="@+id/dropdown_lugarOrigen"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_lugar_origen"
                        android:inputType="none"
                        android:textColorHint="#546E7A" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText_descripcionPlastico"
                    android:layout_margin="6dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="200"
                    app:endIconMode="clear_text">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_descripcion"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/idFabRegistro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:contentDescription="@string/boton_guardar"
                    android:src="@drawable/ic_baseline_done_24"
                    app:backgroundTint="#83CF2A"
                    android:layout_gravity="right"/>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/boton_camara"
        android:src="@android:drawable/ic_menu_camera"
        app:backgroundTint="#83CF2A"
        app:layout_anchor="@id/img_plasticoPreview"
        app:layout_anchorGravity="bottom|right|end"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>