<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Noticias.ListaNoticiasFragment"
    android:background="@drawable/background2">

    <TextView
        android:id="@+id/tv_lista_vacia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#2196F3"
        android:text="@string/hello_blank_fragment"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/idLayoutFondo"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:background="#2196F3"
        android:elevation="8dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tituloNoticias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="130dp"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:text="@string/titulo_noticias_green"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/btnIcoAtras"
            android:layout_width="60dp"
            android:layout_height="49dp"
            android:layout_marginStart="2dp"
            android:backgroundTint="#03A9F4"
            android:contentDescription="@string/boton_regresar"
            android:src="?attr/actionModeCloseDrawable"
            app:tint="#FFFFFF" />


        <ImageButton
            android:id="@+id/btnAyuda"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="0dp"
            android:background="#03A9F4"
            android:contentDescription="@string/boton_ayuda"
            android:src="@android:drawable/ic_menu_help" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleView_listaNoticias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idLayoutFondo" />

</androidx.constraintlayout.widget.ConstraintLayout>