<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/aqp"
    tools:context=".ui.Sesion.AccederFragment">

    <!-- Titulo de Marca -->

    <Button
        android:id="@+id/redireccionOrganizacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="250dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="#2196F3"
        android:text="@string/boton_organizacion"
        android:textSize="13sp" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="221dp"
        android:layout_height="146dp"
        android:layout_marginLeft="94dp"
        android:layout_marginTop="-50dp"
        android:src="@drawable/aqpgreen_logo" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="38dp"
        android:layout_marginTop="-20dp"
        android:layout_marginEnd="38dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true">

        <!-- Contenedor grande de todo los datos -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- Contenedor de opciones de login y registro-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/switch_tumbs"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/logIn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="1dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/switch_trcks"
                    android:gravity="center"
                    android:paddingLeft="15dp"
                    android:paddingTop="5dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="5dp"
                    android:text="@string/boton_acceder"
                    android:textAlignment="center"
                    android:textColor="@color/textColor"
                    android:textSize="14sp"
                    android:textStyle="bold|normal"
                    app:backgroundTint="#3FC644" />

                <Button
                    android:id="@+id/singUp"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.9"
                    android:gravity="center"
                    android:paddingLeft="15dp"
                    android:paddingTop="5dp"
                    android:paddingRight="15dp"
                    android:paddingBottom="5dp"
                    android:text="@string/label_button_registrarse"
                    android:textAlignment="center"
                    android:textColor="@color/pinkColor"
                    android:textSize="14sp"
                    android:textStyle="bold|normal"
                    app:backgroundTint="#FFFFFF" />
            </LinearLayout>

            <!-- Contenedor de ingreso de datos -->
            <LinearLayout
                android:id="@+id/logInLayout"
                android:layout_width="match_parent"
                android:layout_height="213dp"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="25dp">


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:hint="@string/label_nombre_usuario"
                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="1dp"
                    app:hintTextColor="#4E4A4A"
                    app:shapeAppearanceOverlay="@style/Button4">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/LnombreUsuarioEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName|textEmailAddress"
                        android:textColor="@color/black"
                        android:textSize="13sp"
                        android:textStyle="normal" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:hint="@string/label_contraseña"
                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="1dp"
                    app:endIconMode="password_toggle"
                    app:hintTextColor="#4E4A4A"
                    app:shapeAppearanceOverlay="@style/Button4">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/LcontraseñaEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textSize="13sp"
                        android:textStyle="normal" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- TextView de olviso su contraseña -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_olvido_contraseña"
                    android:textAlignment="textEnd"
                    android:textColor="#616161"
                    android:textSize="11sp"
                    android:textStyle="normal" />

                <CheckBox
                    android:id="@+id/checkbox_guardarSesion"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:text="@string/label_guardar_sesion"
                    android:textColor="#616161"
                    android:textSize="12sp"
                    android:textStyle="normal" />

            </LinearLayout>
            <!-- Boton de login-->

            <Button
                android:id="@+id/botonLoginCompleto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:elevation="15dp"
                android:gravity="center"
                android:text="@string/label_button_acceder"
                android:textAllCaps="false"
                android:textColor="@color/textColor"
                android:textSize="17sp"
                app:backgroundTint="#3FC644"
                app:shapeAppearanceOverlay="@style/Button5" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/label_formas_registrarse"
                android:textAlignment="center"
                android:textColor="#474646"
                android:textSize="14sp"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/ic_facebook" />

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/ic_google" />

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/ic_twitter" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>